styles/main.less
/* ... */
.button.book-action{
    .mixin-font-light;
    .mixin-book-action;
    font-size: 1.375em; // 22px
    padding: 0.54545455em 1em; // 12px 22px
}

.book.details.floating{
    position: absolute;
    width: 11.125em; // 178px
    z-index: 25;
    top: -1px;
    ul{
        .mixin-bordered(@table-stand-out-border);
        background: #FFF;
        clear: both;
        float: none;
        width: 100%;
        li{
            background: #FFF;
            padding: 0.625em 0;
            margin: 0 0.625em;
            &.header{
                border-top: none;
                color: @stand-out-blue;
            }
            &.price{
                padding-top: 0.3125em;
                padding-bottom: 0.3125em;
                .currency,
                .value{
                    color: @price-stand-out;
                }
            }
            &.photos{
                height: auto;
                padding-bottom: 0;
            }
            &.book{
                border-top: none;
                margin-top: 1em;
                button{
                    display: block;
                }
            }
            &.pin{
                padding: 0.625em 1.5em; // 10px 24px
                .check{
                    background-position: -2px -304px;
                }
                &.checked{
                    .check{
                        background-position: -2px -280px;
                    }
                }
            }
            img{
                .mixin-bordered(@table-stand-out-border);
            }
        }
    }
    .book-action{
        width: 100%;
    }
}

/* footer section */
.footer-container{
    margin-bottom: 10em;
}
/* end footer section */

.pagination{
    margin-top: 1.5em;
    .title{
        .mixin-font-light;
        color: @50-text-color;
        display: inline-block;
        font-size: 1.25em; // 20px
        line-height: 1.75em;
        padding-right: 0.9375em;
    }
    ol{
        display: inline-block;
        list-style-type: none;
        margin: 0;
        padding: 0;
        li {
            display: inline-block;
            button{
                .mixin-font-light;
                .mixin-hoverable;
                background: transparent;
                border: none;
                line-height: 1.25em;
                height: 1.25em;
                font-size: 1.25em; // 20px
                text-align: center;
                width: 1.25em; // 25px
                &.active,
                &:hover{
                    .mixin-action;
                }
            }
        }
    }
    .steps{
        float: right;
        button{
            .mixin-sprite;
            .mixin-bordered(@step-btn-border);
            background-color: @step-btn-background;
            height: 2.125em; // 34px
            width: 2.125em; // 34px
            &.left{
                background-position: -1px -542px;
                margin-right: 0.625em; // 10px
            }
            &.right{
                background-position: -28px -542px;
            }
        }
    }
    &.bottom{
        margin-top: 0.75em;
    }
}

#ui-datepicker-div{
    .mixin-form-input-active;
    .mixin-default-label;
    margin-left: -1px;
    padding: 0.25em;
    font-size: 1.375em;
    thead{
        th{
            font-weight: normal;
            font-size: 0.625em;
        }
    }
    tbody{
        background: #FFF;
        tr{
            border-top: 1px solid #eee;
        }
        td{
            padding: 0.5em;
            text-align: right;
            a{
                .mixin-hoverable;
                color: @default-text-color;
                text-decoration: none;
                &:hover{
                    color: @calendar-selectable-color-hover;
                }
            }
            span{
                .mixin-hoverable;
            }
        }
    }
    .ui-corner-all{
        font-size: 0.85em;
    }
    .ui-datepicker-header{
        line-height: 1.5em;
        margin-bottom: 1em;
    }
    .ui-datepicker-prev{
        .mixin-hoverable;
        float: left;
        &:hover{
            color: @calendar-selectable-color-hover;
        }
    }
    .ui-datepicker-next{
        .mixin-hoverable;
        float: right;
        &:hover{
            color: @calendar-selectable-color-hover;
        }
    }
    .ui-datepicker-title{
        color: @heading-blue;
        text-align: center;
    }
    .ui-state-disabled{
        color: @calendar-unselectable-color;
        &:hover{
            color: @calendar-unselectable-color;
        }
    }
}

/* ==========================================================================
   Media Queries
   ========================================================================== */

@media only screen and (min-width: 480px) {
}

@media only screen and (min-width: 768px) {
}

@media only screen and (min-width: 950px) {
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

.ir {
    background-color: transparent;
    border: 0;
    overflow: hidden;
    *text-indent: -9999px;
}

.ir:before {
    content: "";
    display: block;
    width: 0;
    height: 150%;
}

.hidden {
    display: none !important;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

.invisible {
    visibility: hidden;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}
/* ... */

